# qpole_bfield_mapping

./: .gitignore  CMakeLists.txt
data/: B_field_all_traces_total.csv  B_field_one_particle.csv  B_field_traces_total.csv  B_field_traces_total_unstretched_grid.csv  particle_currents.csv  wire_z.csv
data/particle_data_stitched/: particle_1.csv  particle_10.csv  particle_100.csv  particle_101.csv  particle_102.csv  particle_104.csv  particle_106.csv  particle_110.csv  particle_111.csv  particle_113.csv  particle_116.csv  particle_117.csv  particle_118.csv  particle_119.csv  particle_121.csv  particle_122.csv  particle_125.csv  particle_129.csv  particle_131.csv  particle_133.csv  particle_134.csv  particle_137.csv  particle_138.csv  particle_14.csv  particle_142.csv  particle_145.csv  particle_146.csv  particle_147.csv  particle_148.csv  particle_149.csv  particle_150.csv  particle_151.csv  particle_152.csv  particle_155.csv  particle_156.csv  particle_157.csv  particle_162.csv  particle_164.csv  particle_166.csv  particle_167.csv  (+81 more)
include/: ParticleTrace.h  biot_savart_routines.h  constants.h  vector_utils.h
old/: ParticleTrace.h  biot_savart_se.cpp  biot_savart_se.h  main_se.cpp
src/: biot_savart_routines.cpp  main.cpp
